cleanup and added a test for createTransport