@@ -8,11 +8,12 @@ import org.junit.jupiter.api.Test;
 
 import java.lang.reflect.Type;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.LinkedList;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class TransportsServiceTest {
 
@@ -50,14 +51,14 @@ class TransportsServiceTest {
         transport = new Transport(
                 1,
                 site1,
-                new LinkedList<Site>(Arrays.asList(site2)),
+                new LinkedList<>(List.of(site2)),
                 hm,
                 truck1.id(),
                 driver1.id(),
                 LocalDateTime.of(2020, 1, 1, 0, 0),
                 100
         );
-        String json = ts.createTransport(JSON.serialize(transport));
+        ts.createTransport(JSON.serialize(transport));
     }
 
     @AfterEach
@@ -67,6 +68,53 @@ class TransportsServiceTest {
 
     @Test
     void createTransport() {
+        HashMap<String, Integer> load1 = new HashMap<>();
+        load1.put("shirts", 20);
+        load1.put("pants", 15);
+        load1.put("socks", 30);
+        HashMap<String, Integer> unload1 = new HashMap<>();
+        unload1.put("jackets", 10);
+        unload1.put("hats", 5);
+        unload1.put("gloves", 20);
+
+        ItemList itemList = new ItemList(1001, load1, unload1);
+
+        HashMap<Site,ItemList> hm = new HashMap<>();
+
+        Site source = new Site("zone b", "456 oak ave", "(555) 234-5678", "jane doe", Site.SiteType.LOGISTICAL_CENTER);
+        Site destination = new Site("zone a", "123 main st", "(555) 123-4567", "john smith", Site.SiteType.BRANCH);
+        hm.put(destination, itemList);
+        LinkedList<Site> destinations = new LinkedList<>(List.of(destination));
+        TransportsService ts = ModuleFactory.getInstance().getTransportsService();
+        Transport newTransport = new Transport(
+                50,
+                source,
+                destinations,
+                hm,
+                "abc123",
+                1234,
+                LocalDateTime.of(2020, 1, 1, 0, 0),
+                2000
+        );
+        String json = ts.createTransport(JSON.serialize(newTransport));
+        Response<String> response = JSON.deserialize(json, Response.class);
+        assertTrue(response.isSuccess());
+        String updatedJson = ModuleFactory.getInstance()
+                .getTransportsService()
+                .getTransport(
+                        JSON.serialize(Transport.getLookupObject(newTransport.id()))
+                );
+        Type type = new TypeToken<Response<Transport>>(){}.getType();
+        Response<Transport> updatedResponse = JSON.deserialize(updatedJson, type);
+        Transport updatedTransport = updatedResponse.getData();
+        assertEquals(newTransport.id(), updatedTransport.id());
+        assertEquals(newTransport.source(), updatedTransport.source());
+        assertEquals(newTransport.destinations(), updatedTransport.destinations());
+        assertEquals(newTransport.itemLists(), updatedTransport.itemLists());
+        assertEquals(newTransport.truckId(), updatedTransport.truckId());
+        assertEquals(newTransport.driverId(), updatedTransport.driverId());
+        assertEquals(newTransport.scheduledTime(), updatedTransport.scheduledTime());
+        assertEquals(newTransport.weight(), updatedTransport.weight());
     }
 
     @Test
@@ -88,7 +136,7 @@ class TransportsServiceTest {
         Site source = new Site("zone b", "456 oak ave", "(555) 234-5678", "jane doe", Site.SiteType.LOGISTICAL_CENTER);
         Site destination = new Site("zone a", "123 main st", "(555) 123-4567", "john smith", Site.SiteType.BRANCH);
         hm.put(destination, itemList);
-        LinkedList<Site> destinations = new LinkedList<>(Arrays.asList(destination));
+        LinkedList<Site> destinations = new LinkedList<>(List.of(destination));
         TransportsService ts = ModuleFactory.getInstance().getTransportsService();
         Transport newTransport = new Transport(
                 1,
@@ -106,7 +154,7 @@ class TransportsServiceTest {
         String updatedJson = ModuleFactory.getInstance()
                 .getTransportsService()
                 .getTransport(
-                        JSON.serialize(Transport.getLookupObject(1))
+                        JSON.serialize(Transport.getLookupObject(newTransport.id()))
                 );
         Type type = new TypeToken<Response<Transport>>(){}.getType();
         Response<Transport> updatedResponse = JSON.deserialize(updatedJson, type);
